--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "next": "15.3.5",
+    "react-dropzone": "^14.2.3",
+    "react-pdf": "^7.7.0",
+    "pdfjs-dist": "^3.11.174"
   },
   "devDependencies": {
     "typescript": "^5",
